Source/WebCore/platform/graphics/FontCascadeDescription.cpp
@@ -63,6 +63,7 @@ FontCascadeDescription::FontCascadeDescription()
 }
 
 #if !USE_PLATFORM_SYSTEM_FALLBACK_LIST
+
 unsigned FontCascadeDescription::effectiveFamilyCount() const
 {
     return familyCount();
@@ -72,6 +73,7 @@ FontFamilySpecification FontCascadeDescription::effectiveFamilyAt(unsigned i) co
 {
     return familyAt(i);
 }
+
 #endif
 
 FontSelectionValue FontCascadeDescription::lighterWeight(FontSelectionValue weight)
@@ -107,7 +109,7 @@ bool FontCascadeDescription::familiesEqualForTextAutoSizing(const FontCascadeDes
         return false;
 
     for (unsigned i = 0; i < thisFamilyCount; ++i) {
-        if (!equalIgnoringASCIICase(familyAt(i), other.familyAt(i)))
+        if (!familyNamesAreEqual(familyAt(i), other.familyAt(i)))
             return false;
     }
 
@@ -118,29 +120,29 @@ bool FontCascadeDescription::familiesEqualForTextAutoSizing(const FontCascadeDes
 
 bool FontCascadeDescription::familyNamesAreEqual(const AtomicString& family1, const AtomicString& family2)
 {
-    // FIXME: <rdar://problem/33594253> CoreText matches dot-prefixed font names case sensitively. We should
-    // always take the case insensitive patch once this radar is fixed.
+#if PLATFORM(COCOA)
     if (family1.startsWith('.'))
-        return StringHash::equal(family1.string(), family2.string());
+        return family1 == family2;
+#endif
     return ASCIICaseInsensitiveHash::equal(family1, family2);
 }
 
 unsigned FontCascadeDescription::familyNameHash(const AtomicString& family)
 {
-    // FIXME: <rdar://problem/33594253> CoreText matches dot-prefixed font names case sensitively. We should
-    // always take the case insensitive patch once this radar is fixed.
+#if PLATFORM(COCOA)
     if (family.startsWith('.'))
-        return StringHash::hash(family.string());
+        return family.existingHash();
+#endif
     return ASCIICaseInsensitiveHash::hash(family);
 }
 
-String FontCascadeDescription::foldedFamilyName(const AtomicString& family)
+String FontCascadeDescription::foldedFamilyName(const String& family)
 {
-    // FIXME: <rdar://problem/33594253> CoreText matches dot-prefixed font names case sensitively. We should
-    // always take the case insensitive patch once this radar is fixed.
+#if PLATFORM(COCOA)
     if (family.startsWith('.'))
-        return family.string();
-    return family.string().foldCase();
+        return family;
+#endif
+    return family.convertToASCIILowercase();
 }
 
 } // namespace WebCore
